[package]
name = "crokey"
version = "0.3.1"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2021"
keywords = ["key", "parse"]
license = "MIT"
categories = ["command-line-interface", "parsing"]
description = "Parse and describe keys - helping incorporate keybindings in terminal applications"
repository = "https://github.com/Canop/crokey"
readme = "README.md"
rust-version = "1.56"

[dependencies]
crossterm = "0.22.1"
crokey-proc_macros = { path = "src/proc_macros", version = "0.3.1" }

[dev-dependencies]
trybuild = "1.0.55"

[workspace]
members = ["src/proc_macros", "examples/print_key"]
