[package]
name = "crokey"
version = "0.6.2"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2021"
keywords = ["key", "parse"]
license = "MIT"
categories = ["command-line-interface", "parsing"]
description = "Parse and describe keys - helping incorporate keybindings in terminal applications"
repository = "https://github.com/Canop/crokey"
readme = "README.md"
rust-version = "1.56"

[features]
default = ["serde"]

[dependencies]
crossterm = "0.27"
crokey-proc_macros = { path = "src/proc_macros", version = "0.6.0" }
once_cell = "1.12"
serde = { optional = true, version = "1.0.130", features = ["derive"] }
strict = "0.2"

[dev-dependencies]
deser-hjson = "1.0"
trybuild = "1.0.55"

[workspace]
members = ["src/proc_macros", "examples/deser_keybindings", "examples/print_key"]

[patch.crates-io]
# strict = { path = "../strict" }
