[package]
name = "crokey-proc_macros"
version = "0.2.0"
authors = ["Canop <cano.petrole@gmail.com>"]
description = "proc macros for the crokey crate"
license = "MIT"
edition = "2018"

[dependencies]
crossterm = "0.22.1"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"

[lib]
proc-macro = true
path = "mod.rs"
