[package]
name = "crokey-proc_macros"
version = "0.2.2"
authors = ["Canop <cano.petrole@gmail.com>"]
description = "proc macros for the crokey crate"
license = "MIT"
edition = "2018"

[dependencies]
syn = { version = "1.0", default-features = false, features = ["parsing", "proc-macro"] }
proc-macro2 = "1.0"
quote = "1.0"

[lib]
proc-macro = true
path = "mod.rs"
