[package]
name = "crokey-proc_macros"
version = "1.1.0"
authors = ["Canop <cano.petrole@gmail.com>"]
description = "proc macros for the crokey crate"
license = "MIT"
edition = "2018"

[dependencies]
crossterm = "0.28"
proc-macro2 = "1.0"
quote = "1.0"
strict = "0.2"
syn = { version = "1.0", default-features = false, features = ["parsing", "proc-macro"] }

[lib]
proc-macro = true
path = "mod.rs"

